修复文件名称

--- a/tab-webview-subpage-movielist.html
+++ b/tab-webview-subpage-movielist.html
@@ -176,8 +176,8 @@
 			mui.plusReady(function() {
 				//预加载详情页
 				webview_detail = mui.preload({
-					url: 'detail.html',
-					id: 'news_detail',
+					url: 'moviedetail.html',
+					id: 'movie_detail',
 					styles: {
 						"render": "always",
 						"popGesture": "hide",
