--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		-->
 		
 		<header class="mui-bar mui-bar-nav">
-		    <h1 id="title" class="mui-title">Singdl|首页</h1>
+		    <h1 id="title" class="mui-title">Singdl - 首页</h1>
 		</header>
         
 		<nav class="mui-bar mui-bar-tab">
@@ -84,7 +84,7 @@
 					return;
 				}
 				//更换标题
-				title.innerHTML = "Singdl|"+this.querySelector('.mui-tab-label').innerHTML;
+				title.innerHTML = "Singdl - "+this.querySelector('.mui-tab-label').innerHTML;
 				//显示目标选项卡
 				//若为iOS平台或非首次显示，则直接显示
 				if(mui.os.ios||aniShow[targetTab]){
