--- a/moviedetail.html
+++ b/moviedetail.html
@@ -86,7 +86,7 @@
 				vm.author = event.detail.author;
 				vm.time = event.detail.time;
 				//向服务端请求文章详情内容
-				mui.ajax('http://spider.dcloud.net.cn/api/news/36kr/' + guid, {
+				mui.ajax('https://ke.singdl.com/api/article_detail/' + guid, {
 					type: 'GET',
 					dataType: 'json', //服务器返回json格式数据
 					timeout: 15000, //15秒超时
