--- a/tab-webview-subpage-articlelist.html
+++ b/tab-webview-subpage-articlelist.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>Singdl|新文章列表</title>
+		<title>articlelist</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
 
@@ -71,7 +71,6 @@
 				</div>
 			</div>
 			<!--列表信息流 结束-->
-
 		</div>
 
 		<script src="js/mui.js"></script>
@@ -192,14 +191,15 @@
 			var news = new Vue({
 				el: '#news',
 				data: {
+					banner: [], //顶部banner数据
 					items: [] //列表信息流数据
 				}
 			});
 
 			/**
-			 * 打开文章详情
+			 * 打开新闻详情
 			 *
-			 * @param {Object} item 当前点击的文章对象
+			 * @param {Object} item 当前点击的新闻对象
 			 */
 			function open_detail(item) {
 				//触发子窗口变更新闻详情
