--- a/articledetail.html
+++ b/articledetail.html
@@ -33,7 +33,9 @@
 					<div id="kr-article-time" class="kr-article-time">{{time}}</div>
 				</div>
 				<!--文章详细内容-->
-				<div id="kr-article-article" class="kr-article-article" v-html="content"></div>
+				<div id="kr-article-article" class="kr-article-article" v-html="content">
+					{{content}}
+				</div>
 			</div>
 		</div>
 
@@ -85,20 +87,9 @@
 				vm.title = event.detail.title;
 				vm.author = event.detail.author;
 				vm.time = event.detail.time;
-				//向服务端请求文章详情内容
-				mui.ajax('https://ke.singdl.com/api/article_detail/' + guid, {
-					type: 'GET',
-					dataType: 'json', //服务器返回json格式数据
-					timeout: 15000, //15秒超时
-					success: function(rsp) {
-						vm.content = rsp.content;
-					},
-					error: function(xhr, type, errorThrown) {
-						mui.toast('获取文章内容失败');
-						//TODO 此处可以向服务端告警
-					}
-				});
+				vm.content = event.detail.content;
 			});
+				
 
 			//重写返回逻辑
 			mui.back = function() {
