--- a/moviedetail.html
+++ b/moviedetail.html
@@ -10,10 +10,12 @@
 	</head>
 
 	<body>
+		
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">Singdl</h1>
 		</header>
+
 
 		<div class="mui-content">
 			<!--顶部banner图 开始-->
@@ -26,14 +28,13 @@
 			<!--顶部banner图 结束-->
 
 			<div class="kr-article-content">
-				<!-- 文章作者、发布时间等信息 -->
+				<!-- 视频作者、发布时间等信息 -->
 				<div class="kr-article-meta">
 					<div id="kr-article-author" class="kr-article-author">{{author}}</div>
 					<div class="kr-article-text">发表于</div>
 					<div id="kr-article-time" class="kr-article-time">{{time}}</div>
 				</div>
-				<!--文章详细内容-->
-				<div id="kr-article-article" class="kr-article-article" v-html="content"></div>
+				
 			</div>
 		</div>
 
@@ -59,7 +60,7 @@
 					title: '',
 					author: '',
 					time: '',
-					content: ''
+					movie: ''
 				}
 			}
 
@@ -85,19 +86,7 @@
 				vm.title = event.detail.title;
 				vm.author = event.detail.author;
 				vm.time = event.detail.time;
-				//向服务端请求文章详情内容
-				mui.ajax('https://ke.singdl.com/api/article_detail/' + guid, {
-					type: 'GET',
-					dataType: 'json', //服务器返回json格式数据
-					timeout: 15000, //15秒超时
-					success: function(rsp) {
-						vm.content = rsp.content;
-					},
-					error: function(xhr, type, errorThrown) {
-						mui.toast('获取文章内容失败');
-						//TODO 此处可以向服务端告警
-					}
-				});
+				vm.movie  = event.detail.movie;
 			});
 
 			//重写返回逻辑
