--- a/tab-webview-subpage-feedback.html
+++ b/tab-webview-subpage-feedback.html
@@ -10,9 +10,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<button id="submit" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">发送</button>
-			<h1 class="mui-title">问题反馈</h1>
 		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded">
@@ -44,11 +42,9 @@
 			<div class="row mui-input-row">
 				<textarea id='question' class="mui-input-clear question" placeholder="请详细描述你的问题和意见..."></textarea>
 			</div>
-			<p>图片(选填,提供问题截图,总大小10M以下)</p>
-			<div id='image-list' class="row image-list"></div>
-			<p>QQ/邮箱</p>
+			<p>手机号</p>
 			<div class="mui-input-row">
-				<input id='contact' type="text" class="mui-input-clear contact" placeholder="(选填,方便我们联系你 )" />
+				<input id='contact' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
 			</div>
 			<div class="mui-content-padded">
 				<div class="mui-inline">应用评分</div>
