--- a/tab-webview-subpage-goodlist.html
+++ b/tab-webview-subpage-goodlist.html
@@ -15,60 +15,183 @@
 	</head>
 
 	<body>
+		<div class="mui-content" id="news">
+			<!--列表信息流 开始-->
+			<div id="list" class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul class="mui-table-view">
+						<li class="mui-table-view-cell mui-media" v-for="item in items">
+							<div class="mui-card">
+								<div class="mui-card-header mui-card-media">
+									<img src="images/logo.png" />
+									<div class="mui-media-body">
+										{{item.author}}
+										<p>发表于 {{item.time}}</p>
+									</div>
+								</div>
+								<div class="mui-card-content">
+									<img :src="item.audio_coverimg" alt="" width="100%" />
+								</div>
+								<div class="mui-card-footer">
+									<audio :src="item.audio" controls="controls"></audio>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!--列表信息流 结束-->
 
-		<div class="mui-content">
-			<div class="mui-card">
-				<div class="mui-card-content">
-					<div class="mui-card-content-inner">
-						这是一个最简单的卡片视图控件；卡片视图常用来显示完整独立的一段信息，比如一篇文章的预览图、作者信息、点赞数量等
-					</div>
-				</div>
-			</div>
-			<div class="mui-card">
-				<div class="mui-card-header">页眉</div>
-				<div class="mui-card-content">
-					<div class="mui-card-content-inner">
-						包含页眉页脚的卡片，页眉常用来显示面板标题，页脚用来显示额外信息或支持的操作（比如点赞、评论等）
-					</div>
-				</div>
-				<div class="mui-card-footer">页脚</div>
-			</div>
-			
-			<div class="mui-card">
-				<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(images/cbd.jpg)"></div>
-				<div class="mui-card-content">
-					<div class="mui-card-content-inner">
-						<p>Posted on January 18, 2016</p>
-						<p style="color: #333;">这里显示文章摘要，让读者对文章内容有个粗略的概念...</p>
-					</div>
-				</div>
-				<div class="mui-card-footer">
-					<a class="mui-card-link">Like</a>
-					<a class="mui-card-link">Read more</a>
-				</div>
-			</div>
-			
-			
-			
-			<div class="mui-card">
-				<div class="mui-card-header mui-card-media">
-					<img src="images/logo.png" />
-					<div class="mui-media-body">
-						小M
-						<p>发表于 {{item.time}}</p>
-					</div>
-				</div>
-				<div class="mui-card-content" >
-					<img src="images/yuantiao.jpg" alt="" width="100%"/>
-				</div>
-				<div class="mui-card-footer">
-					<a class="mui-card-link">Like</a>
-					<a class="mui-card-link">Comment</a>
-					<a class="mui-card-link">Read more</a>
-				</div>
-			</div>
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="js/mui.min.js"></script>
+				<script src="js/vue.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			var lastId = '',
+				minId = ''; //最新新闻的id
+
+			//mui初始化，配置下拉刷新
+			mui.init({
+				pullRefresh: {
+					container: '#list',
+					down: {
+						style: 'circle',
+						offset: '0px',
+						auto: true,
+						callback: pulldownRefresh
+					},
+					up: {
+						contentrefresh: '正在加载...',
+						callback: pullupRefresh
+					}
+				}
+			});
+
+			/**
+			 *  下拉刷新获取最新列表
+			 */
+			function pulldownRefresh() {
+
+				if(window.plus && plus.networkinfo.getCurrentType() === plus.networkinfo.CONNECTION_NONE) {
+					plus.nativeUI.toast('似乎已断开与互联网的连接', {
+						verticalAlign: 'top'
+					});
+					return;
+				}
+
+				var data = {
+					column: "audio_id,author,title,pushdate,audio_coverimg" //需要的字段名
+				}
+
+				if(lastId) { //说明已有数据，目前处于下拉刷新，增加时间戳，触发服务端立即刷新，返回最新数据
+					data.lastId = lastId;
+					data.time = new Date().getTime() + "";
+				}
+
+				//请求最新列表信息流
+				mui.getJSON("https://ke.singdl.com/api/audio_list/", data, function(rsp) {
+					mui('#list').pullRefresh().endPulldownToRefresh();
+					if(rsp && rsp.length > 0) {
+						lastId = rsp[0].audio_id; //保存最新消息的id，方便下拉刷新时使用
+						if(!minId) { //首次拉取列表时保存最后一条消息的id，方便上拉加载时使用
+							minId = rsp[rsp.length - 1].audio_id;
+						}
+						news.items = convert(rsp);
+					}
+				});
+
+			}
+
+			/**
+			 * 上拉加载拉取历史列表
+			 */
+			function pullupRefresh() {
+				var data = {
+					column: "audio_id,author,title,pushdate,audio_coverimg" //需要的字段名
+				};
+
+				if(minId) { //说明已有数据，目前处于上拉加载，传递当前minId 返回历史数据
+					data.minId = minId;
+					data.time = new Date().getTime() + "";
+					data.pageSize = 10;
+				}
+				//请求历史列表信息流
+				mui.getJSON("https://ke.singdl.com/api/audio_list/", data, function(rsp) {
+					mui('#list').pullRefresh().endPullupToRefresh();
+					if(rsp && rsp.length > 0) {
+						minId = rsp[rsp.length - 1].audio_id; //保存最后一条消息的id，上拉加载时使用
+						news.items = convert(rsp);
+					}
+				});
+			}
+
+			var news = new Vue({
+				el: '#news',
+				data: {
+					items: [] //列表信息流数据
+				}
+			});
+
+			/**
+			 * 1、将服务端返回数据，转换成前端需要的格式
+			 * 2、若服务端返回格式和前端所需格式相同，则不需要改功能
+			 *
+			 * @param {Array} items
+			 */
+			function convert(items) {
+				var newItems = [];
+				items.forEach(function(item) {
+					newItems.push({
+						guid: item.audio_id,
+						title: item.title,
+						author: item.author,
+						cover: "https://ke.singdl.com/media/" + item.audio_coverimg,
+						time: dateUtils.format(item.pushdate)
+					});
+				});
+				return newItems;
+			}
+
+			/**
+			 * 格式化时间的辅助类，将一个时间转换成x小时前、y天前等
+			 */
+			var dateUtils = {
+				UNITS: {
+					'年': 31557600000,
+					'月': 2629800000,
+					'天': 86400000,
+					'小时': 3600000,
+					'分钟': 60000,
+					'秒': 1000
+				},
+				humanize: function(milliseconds) {
+					var humanize = '';
+					mui.each(this.UNITS, function(unit, value) {
+						if(milliseconds >= value) {
+							humanize = Math.floor(milliseconds / value) + unit + '前';
+							return false;
+						}
+						return true;
+					});
+					return humanize || '刚刚';
+				},
+				format: function(dateStr) {
+					var date = this.parse(dateStr)
+					var diff = Date.now() - date.getTime();
+					if(diff < this.UNITS['天']) {
+						return this.humanize(diff);
+					}
+
+					var _format = function(number) {
+						return(number < 10 ? ('0' + number) : number);
+					};
+					return date.getFullYear() + '/' + _format(date.getMonth() + 1) + '/' + _format(date.getDay()) + '-' + _format(date.getHours()) + ':' + _format(date.getMinutes());
+				},
+				parse: function(str) { //将"yyyy-mm-dd HH:MM:ss"格式的字符串，转化为一个Date对象
+					var a = str.split(/[^0-9]/);
+					return new Date(a[0], a[1] - 1, a[2], a[3], a[4], a[5]);
+				}
+			};
+		</script>
 	</body>
 
 </html>
