修改干货和反馈UI

--- a/moviedetail.html
+++ b/moviedetail.html
@@ -81,9 +81,7 @@
 		<script src="js/vue.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
 		<script type="text/javascript">
-			mui.init(
-				mui.alert("您将要观看视频，请确认移动网络流量充足或在WIFI网络观看！", "温馨提醒")
-			);
+			mui.init()
 
 			function getDefaultData() {
 				return {
@@ -131,8 +129,9 @@
 				mui.back = function() {
 					plus.webview.currentWebview().hide("auto", 300);
 				}
-			})
-			
+			});
+			mui.alert("您将要观看视频，请确认移动网络流量充足或在WIFI网络观看！", "温馨提醒", ['确定'],function() {
+},'div')
 		</script>
 
 	</body>
