--- a/tab-webview-subpage-feedback.html
+++ b/tab-webview-subpage-feedback.html
@@ -14,67 +14,60 @@
 		<div class="mui-content">
 			<div class="mui-content-padded">
 				<div class="mui-inline">问题和意见</div>
-				<a class="mui-pull-right mui-inline" href="#popover">
-					快捷输入
-					<span class="mui-icon mui-icon-arrowdown"></span>
-				</a>
-				<!--快捷输入具体内容，开发者可自己替换常用语-->
-				<div id="popover" class="mui-popover">
-					<div class="mui-popover-arrow"></div>
-					<div class="mui-scroll-wrapper">
-						<div class="mui-scroll">
-							<ul class="mui-table-view">
-								<!--仅流应用环境下显示-->
-								<li class="mui-table-view-cell stream">
-									<a href="#">桌面快捷方式创建失败</a>
-								</li>
-								<li class="mui-table-view-cell">
-									<a href="#">界面显示错乱</a>
-								</li>
-								<li class="mui-table-view-cell">
-									<a href="#">启动缓慢，卡出翔了</a>
-								</li>
-								<li class="mui-table-view-cell">
-									<a href="#">偶发性崩溃</a>
-								</li>
-								<li class="mui-table-view-cell">
-									<a href="#">UI无法直视，丑哭了</a>
-								</li>
-							</ul>
-						</div>
-					</div>
 
-				</div>
 			</div>
-			<div class="row mui-input-row">
-				<textarea id='question' class="mui-input-clear question" placeholder="请详细描述你的问题和意见..."></textarea>
-			</div>
-			<p>手机号</p>
-			<div class="mui-input-row">
-				<input id='contact' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
-			</div>
-			<p>姓名</p>
-			<div class="mui-input-row">
-				<input id='name' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
-			</div>
-			<div style="height: 40px;"></div>
-			<button id="submit" type="button" class="mui-btn mui-btn-blue mui-pull-right">发送反馈</button>
-			<div style="height: 10px;"></div>
+		</div>
+
+		<div class="row mui-input-row">
+			<textarea id='question' class="mui-input-clear question" placeholder="请详细描述你的问题和意见..."></textarea>
+		</div>
+		<p>手机号</p>
+		<div class="mui-input-row">
+			<input id='contact' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
+		</div>
+		<p>姓名</p>
+		<div class="mui-input-row">
+			<input id='name' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
+		</div>
+		<div style="height: 40px;"></div>
+		<button id="submit" type="button" class="mui-btn mui-btn-blue mui-pull-right">发送反馈</button>
+		<div style="height: 10px;"></div>
 		</div>
 		<script src="js/mui.min.js"></script>
-		<script src=" js/feedback.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui('.mui-scroll-wrapper').scroll();
 
+			// 获取发送按钮
 			var submit = document.getElementById("submit");
+
 			//监听点击事件
 			submit.addEventListener("tap", function() {
 				var feedback = document.getElementById("question").value;
 				var phone = document.getElementById("contact").value;
 				var name = document.getElementById("name").value;
+
+				mui.ajax('http://192.168.43.105:8000/api/feed_back/', {
+					data: {
+						'feedback':feedback,
+						'phone':phone,
+						'name':name
+					},
+					dataType: 'json', //服务器返回json格式数据
+					type: 'post', //HTTP请求类型
+					timeout: 10000, //超时时间设置为10秒；
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					success: function(data) {
+						//服务器返回响应，根据响应结果，分析是否登录成功；
+					},
+					error: function(xhr, type, errorThrown) {
+						//异常处理；
+						console.log(type);
+					}
+				});
 			});
-			mui.ajax("https://ke.singdl.com/api/feed_back/")
 		</script>
 	</body>
 
