--- a/tab-webview-subpage-goodlist.html
+++ b/tab-webview-subpage-goodlist.html
@@ -25,7 +25,7 @@
 			}
 			
 			audio::-webkit-media-controls-panel {
-				width: calc(100% + 30px);
+				width: calc(115%);
 			}
 		</style>
 		<div class="mui-content" id="news">
