--- a/tab-webview-subpage-feedback.html
+++ b/tab-webview-subpage-feedback.html
@@ -11,6 +11,23 @@
 
 	<body>
 
+		<style type="text/css">
+			.code-highlight {
+				color: white;
+				background-color: darkgreen;
+			}
+			
+			.code-readonly {
+				color:gray
+				background-color: white;
+			}
+			
+			.not-active {
+				color: whitesmoke;
+				background-color: gray;
+			}
+		</style>
+
 		<div class="mui-content">
 			<div class="mui-content-padded">
 				<div class="mui-inline">问题和意见</div>
@@ -25,6 +42,11 @@
 		<div class="mui-input-row">
 			<input id='contact' type="text" class="mui-input-clear contact" placeholder="(反馈问题必填,方便我们联系您 )" />
 		</div>
+		<div class="mui-input-row">
+			<input type="text" placeholder="请输入短信验证码" id="sendcodetext" style="">
+			<button class="mui-btn-mini mui-pull-right code-readonly" style="right: 15px;" id="sendcode" disabled="true">获取验证码</button>
+		</div>
+
 		<p>姓名</p>
 		<div class="mui-input-row">
 			<input id='name' type="text" class="mui-input-clear username" placeholder="(反馈问题必填,方便我们联系您 )" />
@@ -34,12 +56,68 @@
 		<div style="height: 10px;"></div>
 		</div>
 		<script src="js/mui.min.js"></script>
-
+		<script src="js/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
 
 			mui('.mui-scroll-wrapper').scroll();
 
+			var responsecode = ""
+			// 获取验证码按钮
+			var sendcode = document.getElementById("sendcode");
+
+			$(document)
+				.on('input propertychange', '#contact', function(e) {
+					if(e.type === "input" || e.orignalEvent.propertyName === "value") {
+						console.log(this.value.length)
+						if(this.value.length == 11) {
+							var myreg = /^1\d{10}$/;
+							if(!myreg.test(this.value)) {
+								mui.toast("请输入正确的手机号码");
+								return;
+							}
+
+							$('#sendcode').removeClass('not-active').addClass('code-highlight');
+							$("#sendcode").attr('disabled',false);
+						} else {
+							$('#sendcode').addClass('not-active').removeClass('code-highlight');
+							$("#sendcode").attr('disabled',true);
+						}
+					}
+				})
+
+			sendcode.addEventListener("tap", function() {
+				// 获取手机号
+				var phone = document.getElementById("contact").value;
+				
+				mui.ajax('https://ke.singdl.com/api/get_send_msgcode/', {
+					data: {
+						'phone': phone
+					},
+					dataType: 'json', //服务器返回json格式数据
+					type: 'post', //HTTP请求类型
+					timeout: 15000, //超时时间设置为15秒；
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					success: function(data) {
+						var result = eval(data)
+						if(result.flag == 1) {
+							mui.toast("短信验证码发送成功,请注意查收！")
+							responsecode = result.code
+						} else if(result.flag == 2) {
+							mui.toast("短信发送失败，请稍后再试！")
+							responsecode = ""
+						}
+					},
+					error: function(xhr, type, errorThrown) {
+						//异常处理；
+						mui.toast("未知错误，请联系我们！")
+						console.log(type);
+					}
+				});
+
+			})
 
 			// 获取发送按钮
 			var submit = document.getElementById("submit");
@@ -49,39 +127,43 @@
 				var feedback = document.getElementById("question").value;
 				var phone = document.getElementById("contact").value;
 				var name = document.getElementById("name").value;
-
-				mui.ajax('https://ke.singdl.com/api/feed_back/', {
-					data: {
-						'feedback':feedback,
-						'phone':phone,
-						'name':name
-					},
-					dataType: 'json', //服务器返回json格式数据
-					type: 'post', //HTTP请求类型
-					timeout: 15000, //超时时间设置为10秒；
-					headers: {
-						'Content-Type': 'application/json'
-					},
-					success: function(data) {
-					    var result = eval(data);
-					    if(result.flag==0){
-					        mui.toast("发送失败，请稍后再试！")
-						}else if(result.flag==1){
-					        mui.toast("发送失败，问题内容不能为空！")
-						}else if(result.flag==2){
-					        mui.toast("发送失败，输入的姓名无效！")
-						}else if(result.flag==3){
-					        mui.toast("发送失败，手机号无效！")
-						}else{
-					        mui.toast("发送成功！")
+				var sendcodetext = document.getElementById("sendcodetext").value;
+				if(sendcodetext == responsecode) {
+					mui.ajax('https://ke.singdl.com/api/feed_back/', {
+						data: {
+							'feedback': feedback,
+							'phone': phone,
+							'name': name
+						},
+						dataType: 'json', //服务器返回json格式数据
+						type: 'post', //HTTP请求类型
+						timeout: 15000, //超时时间设置为15秒；
+						headers: {
+							'Content-Type': 'application/json'
+						},
+						success: function(data) {
+							var result = eval(data);
+							if(result.flag == 0) {
+								mui.toast("发送失败，请稍后再试！")
+							} else if(result.flag == 1) {
+								mui.toast("发送失败，问题内容不能为空！")
+							} else if(result.flag == 2) {
+								mui.toast("发送失败，输入的姓名无效！")
+							} else if(result.flag == 3) {
+								mui.toast("发送失败，手机号无效！")
+							} else {
+								mui.toast("发送成功！")
+							}
+						},
+						error: function(xhr, type, errorThrown) {
+							//异常处理；
+							mui.toast("未知错误，请联系我们！")
+							console.log(type);
 						}
-                    },
-					error: function(xhr, type, errorThrown) {
-						//异常处理；
-						mui.toast("未知错误，请联系我们！")
-						console.log(type);
-					}
-				});
+					});
+				} else {
+					mui.toast("验证码错误")
+				}
 			});
 		</script>
 	</body>
