--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Singdl</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">-->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
@@ -12,23 +13,13 @@
 		<style>
 			html,
 			body {
-				background-color: #efeff4;
+				background-color: #efefff;
 			}
 		</style>
 	</head>
 
 	<body>
-        <!--
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title">首页</h1>
-		</header>
-		-->
-		
-		<header class="mui-bar mui-bar-nav">
-		    <h1 id="title" class="mui-title">Singdl - 首页</h1>
-		</header>
-        
+
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-webview-subpage-articlelist.html">
 				<span class="mui-icon mui-icon-home"></span>
@@ -42,73 +33,104 @@
 				<span class="mui-icon mui-icon-star"></span>
 				<span class="mui-tab-label">干货</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-feedback.html">
+			<a class="mui-tab-item" href="tab-webview-subpage-setting.html">
 				<span class="mui-icon mui-icon-person"></span>
-				<span class="mui-tab-label">反馈</span>
+				<span class="mui-tab-label">设置</span>
 			</a>
 		</nav>
 		<script src="js/mui.min.js"></script>
+		<script src="js/app.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			 //mui初始化
+			//mui初始化
 			mui.init();
-			var subpages = ['tab-webview-subpage-articlelist.html', 'tab-webview-subpage-movielist.html', 'tab-webview-subpage-goodlist.html', 'tab-webview-subpage-feedback.html'];
+			
+			(function($, doc) {
+				$.init();
+				var settings = app.getSettings();
+				var account = doc.getElementById('account');
+				//
+				window.addEventListener('show', function() {
+					var state = app.getState();
+					account.innerText = state.account;
+				}, false);
+				$.plusReady(function() {
+					//--
+					$.oldBack = mui.back;
+					var backButtonPress = 0;
+					$.back = function(event) {
+						backButtonPress++;
+						if(backButtonPress > 1) {
+							plus.runtime.quit();
+						} else {
+							plus.nativeUI.toast('再按一次退出应用');
+						}
+						setTimeout(function() {
+							backButtonPress = 0;
+						}, 1000);
+						return false;
+					};
+				});
+			}(mui, document));
+			
+			
+			var subpages = ['tab-webview-subpage-articlelist.html', 'tab-webview-subpage-movielist.html', 'tab-webview-subpage-goodlist.html', 'tab-webview-subpage-setting.html'];
 			var subpage_style = {
-				top: '45px',
+				top: '0px',
 				bottom: '51px'
 			};
 
 			var aniShow = {};
 
-			 //创建子页面，首个选项卡页面显示，其它均隐藏；
+			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				for (var i = 0; i < 4; i++) {
+				for(var i = 0; i < 4; i++) {
 					var temp = {};
 					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if (i > 0) {
+					if(i > 0) {
 						sub.hide();
-					}else{
+					} else {
 						temp[subpages[i]] = "true";
-						mui.extend(aniShow,temp);
+						mui.extend(aniShow, temp);
 					}
 					self.append(sub);
 				}
 			});
-			 //当前激活选项
+			//当前激活选项
 			var activeTab = subpages[0];
 			var title = document.getElementById("title");
-			 //选项卡点击事件
+			//选项卡点击事件
 			mui('.mui-bar-tab').on('tap', 'a', function(e) {
 				var targetTab = this.getAttribute('href');
-				if (targetTab == activeTab) {
+				if(targetTab == activeTab) {
 					return;
 				}
 				//更换标题
-				title.innerHTML = "Singdl - "+this.querySelector('.mui-tab-label').innerHTML;
+				//title.innerHTML = "Singdl - "+this.querySelector('.mui-tab-label').innerHTML;
 				//显示目标选项卡
 				//若为iOS平台或非首次显示，则直接显示
-				if(mui.os.ios||aniShow[targetTab]){
+				if(mui.os.ios || aniShow[targetTab]) {
 					plus.webview.show(targetTab);
-				}else{
+				} else {
 					//否则，使用fade-in动画，且保存变量
 					var temp = {};
 					temp[targetTab] = "true";
-					mui.extend(aniShow,temp);
-					plus.webview.show(targetTab,"fade-in",300);
+					mui.extend(aniShow, temp);
+					plus.webview.show(targetTab, "fade-in", 300);
 				}
 				//隐藏当前;
 				plus.webview.hide(activeTab);
 				//更改当前活跃的选项卡
 				activeTab = targetTab;
 			});
-			 //自定义事件，模拟点击“首页选项卡”
+			//自定义事件，模拟点击“首页选项卡”
 			document.addEventListener('gohome', function() {
 				var defaultTab = document.getElementById("defaultTab");
 				//模拟首页点击
 				mui.trigger(defaultTab, 'tap');
 				//切换选项卡高亮
 				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
-				if (defaultTab !== current) {
+				if(defaultTab !== current) {
 					current.classList.remove('mui-active');
 					defaultTab.classList.add('mui-active');
 				}
