--- a/tab-webview-subpage-feedback.html
+++ b/tab-webview-subpage-feedback.html
@@ -70,10 +70,12 @@
 				.on('input propertychange', '#contact', function(e) {
 					if(e.type === "input" || e.orignalEvent.propertyName === "value") {
 						console.log(this.value.length)
-						if(this.value.length == 11) {
+						if(this.value.length >= 11) {
 							var phonereg = /^((13[0-9])|(14[5,7,9])|(15[^4])|(18[0-9])|(17[0,1,3,5,6,7,8]))\d{8}$/;
 							if(!phonereg.test(this.value)) {
 								mui.toast("请输入正确的手机号码");
+								$('#sendcode').addClass('not-active').removeClass('code-highlight');
+								$("#sendcode").attr('disabled',true);
 								return;
 							}
 							$('#sendcode').removeClass('not-active').addClass('code-highlight');
