--- a/reg.html
+++ b/reg.html
@@ -129,7 +129,116 @@
 		<script src="js/mui.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/jquery.min.js"></script>
-		<script>
+		<script src="js/rollups/aes.js"></script>
+		<script src="js/components/enc-base64-min.js"></script>
+		<script type="text/javascript">
+			mui.init();
+
+			mui('.mui-scroll-wrapper').scroll();
+
+			var responsecode = ""
+			// 获取验证码按钮
+			var getCode = document.getElementById("getCode");
+
+			$(document)
+				.on('input propertychange', '#phone', function(e) {
+					if(e.type === "input" || e.orignalEvent.propertyName === "value") {
+						console.log(this.value.length)
+						if(this.value.length >= 11) {
+							var phonereg = /^((13[0-9])|(14[5,7,9])|(15[^4])|(18[0-9])|(17[0,1,3,5,6,7,8]))\d{8}$/;
+							if(!phonereg.test(this.value)) {
+								mui.toast("请输入正确的手机号码");
+								$("#getCode").attr('disabled', true);
+								return;
+							}
+							$("#getCode").attr('disabled', false);
+						} else {
+							$("#getCode").attr('disabled', true);
+						}
+					}
+				})
+
+			getCode.addEventListener("tap", function() {
+				// 获取手机号
+				var phone = document.getElementById("phone").value;
+
+				mui.ajax('https://ke.singdl.com/api/get_send_msgcode/', {
+					data: {
+						'phone': phone
+					},
+					dataType: 'json', //服务器返回json格式数据
+					type: 'post', //HTTP请求类型
+					timeout: 15000, //超时时间设置为15秒；
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					success: function(data) {
+						var result = eval(data)
+						if(result.flag == 1) {
+							mui.toast("短信验证码发送成功,请注意查收！")
+							responsecode = result.code
+						} else if(result.flag == 2) {
+							mui.toast("短信发送失败，请稍后再试！")
+							responsecode = ""
+						}
+					},
+					error: function(xhr, type, errorThrown) {
+						//异常处理；
+						mui.toast("未知错误，请联系我们！")
+						console.log(type);
+					}
+				});
+
+			})
+
+			// 获取发送按钮
+			var reg = document.getElementById("reg");
+
+			//监听点击事件
+			reg.addEventListener("tap", function() {
+				var account = document.getElementById("account").value;
+				var phone = document.getElementById("phone").value;
+				var password = document.getElementById("password").value;
+				var verifycode = document.getElementById("VerifyCode").value;
+				if(sendcodetext == responsecode) {
+					mui.ajax('https://ke.singdl.com/api/reg/', {
+						data: {
+							'account': account,
+							'phone': phone,
+							'password': password,
+							'verifycode': verifycode
+						},
+						dataType: 'json', //服务器返回json格式数据
+						type: 'post', //HTTP请求类型
+						timeout: 15000, //超时时间设置为15秒；
+						headers: {
+							'Content-Type': 'application/json'
+						},
+						success: function(data) {
+							var result = eval(data);
+							if(result.flag == 0) {
+								mui.toast("发送失败，请稍后再试！")
+							} else if(result.flag == 1) {
+								mui.toast("发送失败，问题内容不能为空！")
+							} else if(result.flag == 2) {
+								mui.toast("发送失败，输入的姓名无效！")
+							} else if(result.flag == 3) {
+								mui.toast("发送失败，手机号无效！")
+							} else {
+								mui.toast("发送成功！")
+							}
+						},
+						error: function(xhr, type, errorThrown) {
+							//异常处理；
+							mui.toast("未知错误，请联系我们！")
+							console.log(type);
+						}
+					});
+				} else {
+					mui.toast("验证码错误")
+				}
+			});
+			// localStorage.countdown="60";
 			(function($, doc) {
 				$.init();
 				$.plusReady(function() {
@@ -167,63 +276,103 @@
 					});
 				});
 			}(mui, document));
+			//
 
-			mui.plusReady(function() {
-				countdown = localStorage.countdown;
-				if(countdown != "0") {
-					$("#getCode").html("重新发送 ( " + countdown + " )");
-					timedown();
-				}
-			});
+			//加密解密函数
 
-			function timedown(obj) {
-				countdown = localStorage.countdown;
-				if(countdown == "0") {
-					$("#getCode").html("获取验证码");
-					return clearTimeout(); //清除定时，没有的话会导致后面每次减一越来越快
-				} else {
-					$("#getCode").html("重新发送 ( " + countdown + " )");
-					countdown = parseInt(countdown) - 1;
-					localStorage.countdown = countdown.toString();
+			function encrypt(word) {
+				var key = CryptoJS.enc.Utf8.parse("429004198807184233"); //16位
+				var iv = CryptoJS.enc.Utf8.parse("429004198807184233");
+				var encrypted = '';
+				if(typeof(word) == 'string') {
+					var srcs = CryptoJS.enc.Utf8.parse(word);
+					encrypted = CryptoJS.AES.encrypt(srcs, key, {
+						iv: iv,
+						mode: CryptoJS.mode.CBC,
+						padding: CryptoJS.pad.Pkcs7
+					});
+				} else if(typeof(word) == 'object') { //对象格式的转成json字符串
+					data = JSON.stringify(word);
+					var srcs = CryptoJS.enc.Utf8.parse(data);
+					encrypted = CryptoJS.AES.encrypt(srcs, key, {
+						iv: iv,
+						mode: CryptoJS.mode.CBC,
+						padding: CryptoJS.pad.Pkcs7
+					})
 				}
-				setTimeout(function() {
-					timedown(obj);
-				}, 1000); //定时每秒减一
+				return encrypted.ciphertext.toString();
 			}
-			//手机验证,判断60s之后再发送验证码
-			function settime(obj) {
-				var phone = document.getElementById("phone");
-				var password = document.getElementById("password");
-				var password_confirm = document.getElementById("password_confirm");
-				var check_phone_number = /^1[3458]\d{9}$/;
-				if(phone.value.length == 0) {
-					plus.ui.toast("手机号不能为空");
-					return;
-				}
-				if(phone.value.length != 11) {
-					plus.ui.toast("请输入有效的手机号！");
-					return;
-				}
-				if(!phone.value.match(check_phone_number)) {
-					plus.ui.toast("请输入有效的手机号");
-					return;
-				} else {
-					//短信发送
-					 mui.getJSON("https://ke.singdl.com/api/get_send_code/", { "phone": phone }, function(json){
-					  if(json.status == "error")
-					  {
-					      mui.toast(json.msg);
-					  }
-					  else
-					  {
-					      localStorage.setItem("msncode",json.code)
-					      mui.toast(json.msg);
-					  }
-					 });
-					localStorage.countdown = "60";
-					timedown(obj);
-				}
+			// aes解密
+			function decrypt(word) {
+				var key = CryptoJS.enc.Utf8.parse("429004198807184233");
+				var iv = CryptoJS.enc.Utf8.parse("429004198807184233");
+				var encryptedHexStr = CryptoJS.enc.Hex.parse(word);
+				var srcs = CryptoJS.enc.Base64.stringify(encryptedHexStr);
+				var decrypt = CryptoJS.AES.decrypt(srcs, key, {
+					iv: iv,
+					mode: CryptoJS.mode.CBC,
+					padding: CryptoJS.pad.Pkcs7
+				});
+				var decryptedStr = decrypt.toString(CryptoJS.enc.Utf8);
+				return decryptedStr.toString();
 			}
+
+			// mui.plusReady(function() {
+			// 	countdown = localStorage.countdown;
+			// 	if(countdown != "0") {
+			// 		$("#getCode").html("重新发送 ( " + countdown + " )");
+			// 		timedown();
+			// 	}
+			// });
+			//
+			// function timedown(obj) {
+			// 	countdown = localStorage.countdown;
+			// 	if(countdown == "0") {
+			// 		$("#getCode").html("获取验证码");
+			// 		return clearTimeout(); //清除定时，没有的话会导致后面每次减一越来越快
+			// 	} else {
+			// 		$("#getCode").html("重新发送 ( " + countdown + " )");
+			// 		countdown = parseInt(countdown) - 1;
+			// 		localStorage.countdown = countdown.toString();
+			// 	}
+			// 	setTimeout(function() {
+			// 		timedown(obj);
+			// 	}, 1000); //定时每秒减一
+			// }
+			// //手机验证,判断60s之后再发送验证码
+			// function settime(obj) {
+			// 	var phone = document.getElementById("phone");
+			// 	var password = document.getElementById("password");
+			// 	var password_confirm = document.getElementById("password_confirm");
+			// 	var check_phone_number = /^1[3458]\d{9}$/;
+			// 	if(phone.value.length == 0) {
+			// 		plus.ui.toast("手机号不能为空");
+			// 		return;
+			// 	}
+			// 	if(phone.value.length != 11) {
+			// 		plus.ui.toast("请输入有效的手机号！");
+			// 		return;
+			// 	}
+			// 	if(!phone.value.match(check_phone_number)) {
+			// 		plus.ui.toast("请输入有效的手机号");
+			// 		return;
+			// 	} else {
+			// 		//短信发送
+			// 		 mui.getJSON("https://ke.singdl.com/api/get_send_code/", { "phone": phone }, function(json){
+			// 		  if(json.status == "error")
+			// 		  {
+			// 		      mui.toast(json.msg);
+			// 		  }
+			// 		  else
+			// 		  {
+			// 		      localStorage.setItem("msncode",json.code)
+			// 		      mui.toast(json.msg);
+			// 		  }
+			// 		 });
+			// 		localStorage.countdown = "60";
+			// 		timedown(obj);
+			// 	}
+			// }
 		</script>
 	</body>
 
